// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing ShareUserList component should snapshot works with english language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <form
      class="MuiBox-root MuiBox-root Component-root Component-root"
    >
      <div
        class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
          data-shrink="true"
          data-testid="textfield-share-user-list-label"
          for="textfield-share-user"
          id="textfield-share-user-label"
        >
          Username/E-mail
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            data-testid="textfield-share-user-list"
            id="textfield-share-user"
            maxlength="100"
            placeholder="Type the user name or e-mail"
            required=""
            type="text"
            value=""
          />
          <button
            aria-label="Search"
            class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="iconbutton-share-user-list-search"
            tabindex="0"
            title="Search"
            type="submit"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
            >
              <span>
                Username/E-mail
                 *
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </form>
    <ul
      class="MuiList-root Component-root Component-root MuiList-padding"
    >
      <li
        class="MuiListItem-container"
      >
        <div
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
            data-testid="listitemtext-user-list-0"
          >
            <span
              class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
              >
                Daniel
              </div>
            </span>
          </div>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
        <div
          class="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
        >
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root"
          >
            <div
              class="MuiBox-root MuiBox-root Component-root Component-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root PrivateSwitchBase-checked MuiCheckbox-checked MuiIconButton-colorSecondary"
                data-testid="checkbox-admin-0"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    checked=""
                    class="PrivateSwitchBase-input"
                    data-indeterminate="false"
                    id="checkbox-admin-1"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <label
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                for="checkbox-admin-1"
              >
                Administrator
              </label>
            </div>
            <button
              aria-label="Delete"
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              data-testid="iconbutton-share-user-list-delete-0"
              tabindex="0"
              title="Delete"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`testing ShareUserList component should snapshot works with portuguese language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <form
      class="MuiBox-root MuiBox-root Component-root Component-root"
    >
      <div
        class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
          data-shrink="true"
          data-testid="textfield-share-user-list-label"
          for="textfield-share-user"
          id="textfield-share-user-label"
        >
          Nome de usuário/E-mail
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            data-testid="textfield-share-user-list"
            id="textfield-share-user"
            maxlength="100"
            placeholder="Digite o nome ou e-mail"
            required=""
            type="text"
            value=""
          />
          <button
            aria-label="Buscar"
            class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="iconbutton-share-user-list-search"
            tabindex="0"
            title="Buscar"
            type="submit"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
            >
              <span>
                Nome de usuário/E-mail
                 *
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </form>
    <ul
      class="MuiList-root Component-root Component-root MuiList-padding"
    >
      <li
        class="MuiListItem-container"
      >
        <div
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
            data-testid="listitemtext-user-list-0"
          >
            <span
              class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
              >
                Daniel
              </div>
            </span>
          </div>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
        <div
          class="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
        >
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root"
          >
            <div
              class="MuiBox-root MuiBox-root Component-root Component-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root PrivateSwitchBase-checked MuiCheckbox-checked MuiIconButton-colorSecondary"
                data-testid="checkbox-admin-0"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    checked=""
                    class="PrivateSwitchBase-input"
                    data-indeterminate="false"
                    id="checkbox-admin-1"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <label
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                for="checkbox-admin-1"
              >
                Administrador
              </label>
            </div>
            <button
              aria-label="Deletar"
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              data-testid="iconbutton-share-user-list-delete-0"
              tabindex="0"
              title="Deletar"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`testing ShareUserList component should snapshot works with spanish language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <form
      class="MuiBox-root MuiBox-root Component-root Component-root"
    >
      <div
        class="MuiFormControl-root MuiTextField-root WithStyles(ForwardRef(TextField))-root WithStyles(ForwardRef(TextField))-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
          data-shrink="true"
          data-testid="textfield-share-user-list-label"
          for="textfield-share-user"
          id="textfield-share-user-label"
        >
          Nombre de usuario/E-mail
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            data-testid="textfield-share-user-list"
            id="textfield-share-user"
            maxlength="100"
            placeholder="Escriba el nombre o e-mail"
            required=""
            type="text"
            value=""
          />
          <button
            aria-label="Buscar"
            class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
            data-testid="iconbutton-share-user-list-search"
            tabindex="0"
            title="Buscar"
            type="submit"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
            >
              <span>
                Nombre de usuario/E-mail
                 *
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </form>
    <ul
      class="MuiList-root Component-root Component-root MuiList-padding"
    >
      <li
        class="MuiListItem-container"
      >
        <div
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root Component-root MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiListItemText-root WithStyles(ForwardRef(ListItemText))-root WithStyles(ForwardRef(ListItemText))-root"
            data-testid="listitemtext-user-list-0"
          >
            <span
              class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
            >
              <div
                class="MuiBox-root MuiBox-root Component-root Component-root"
              >
                Daniel
              </div>
            </span>
          </div>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
        <div
          class="MuiListItemSecondaryAction-root WithStyles(ForwardRef(ListItemSecondaryAction))-root"
        >
          <div
            class="MuiBox-root MuiBox-root Component-root Component-root"
          >
            <div
              class="MuiBox-root MuiBox-root Component-root Component-root"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary WithStyles(ForwardRef(Checkbox))-root WithStyles(ForwardRef(Checkbox))-root Styled(WithStyles(ForwardRef(Checkbox)))-root Styled(WithStyles(ForwardRef(Checkbox)))-root PrivateSwitchBase-checked MuiCheckbox-checked MuiIconButton-colorSecondary"
                data-testid="checkbox-admin-0"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    checked=""
                    class="PrivateSwitchBase-input"
                    data-indeterminate="false"
                    id="checkbox-admin-1"
                    type="checkbox"
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <label
                class="MuiTypography-root Component-root Component-root MuiTypography-body1"
                for="checkbox-admin-1"
              >
                Administrador
              </label>
            </div>
            <button
              aria-label="Eliminar"
              class="MuiButtonBase-root MuiIconButton-root Component-root Component-root Styled(Component)-root Styled(Component)-root WithStyles(ForwardRef(Tooltip))-root WithStyles(ForwardRef(Tooltip))-root"
              data-testid="iconbutton-share-user-list-delete-0"
              tabindex="0"
              title="Eliminar"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
